kube/deployment.yml
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: graphql-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: application
    spec:
      containers:
      - name: graphql
        image: graphql:next
        command: ["yarn", "debug:ts"]
        ports:
        - containerPort: 3000
