kube/client-deployment.yml
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: client
    spec:
      volumes:
      - name: code
        hostPath:
          path: /Users/chris/Sites/docker-yarn-workspace-demo
      containers:
      - name: client
        image: node:next
        command: ["yarn", "debug:client"]
        ports:
        - containerPort: 3000
        - containerPort: 5858
        volumeMounts:
        - mountPath: /code
          name: code
---
apiVersion: v1
kind: Service
metadata:
  name: client-svc
  labels:
    run: application
spec:
  selector:
    run: client
  # type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 3000
    # nodePort: 31001
    protocol: TCP

  - name: debug-port
    port: 5858
    targetPort: 5858
    # nodePort: 32001
